greeter/.openshift/deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: devops-ex-greeter-v1
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: devops-ex-greeter
        version: v1
    spec:
      containers:
      - name: app
        image: docker-registry.default.svc:5000/showcase-istio/devops-ex-greeter
        ports:
        - containerPort: 8080
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: devops-ex-greeter-v2
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: devops-ex-greeter
        version: v2
    spec:
      containers:
      - name: app
        image: docker-registry.default.svc:5000/showcase-istio/devops-ex-greeter
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: devops-ex-greeter
  labels:
    app: devops-ex-greeter
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: devops-ex-greeter
