greeter/.openshift/knative-service.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: devops-ex-greeter-knative
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: quay.io/literalice/greeter-go:0.0.1
            env:
            - name: ENV_NAME
              value: "Knative"
            - name: ENV_VERSION
              value: "v1"
