greeter/.openshift/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devops-ex-greeter
spec:
  hosts:
  - greeter
  http:
  - route:
    - destination:
        host: greeter
        subset: v1
